--- a/assignment-12/index.html
+++ b/assignment-12/index.html
@@ -5,7 +5,7 @@
       <link rel="stylesheet" type="text/css" href="./css/style.css">
 
    </head>
-<body>
+<body>  
   <div class="parent-container">
    <div class="inner-box">
       <h2>So Many Boxes</h2>
@@ -28,7 +28,59 @@
    <p><i>My content is visible, but contained.</i></p>
    <p>Ipsum laborum amet exercitation pariatur tempor ea cupidatat proident duis nostrud. Lorem aliquip veniam eiusmod do laborum ullamco ex id culpa consequat dolore non tempor in excepteur enim aliqua. Dolor commodo officia culpa aliqua nulla sunt non consectetur aute amet culpa nisi aute elit velit commodo dolore. Occaecat laboris et irure labore elit commodo est nisi ut ea sint occaecat aliquip sit fugiat.</p>
 </div>
+<div class="parent-container-03">
+      <div class="child-container-03 border-01">
+         <em>Great Curved Borders.</em>
+         <br>What fun these are.
+         <br>What a nice oval.
+      </div>
+      <header>
+         <p style="text-transform: capital">A menu with items using default display:</p>
+         <div class="menu-item">
+            Home
+         </div>
+         <div class="menu-item">
+            Services
+         </div>
+         <div class="menu-item">
+            About
+         </div>
+         <div class="menu-item">
+            Contact
+         </div>
+      </header>
 
+      <header class="">
+         <p>A menu with items displayed inline:</p>
+         <div class="menu-item display-inline">
+            Home
+         </div>
+         <div class="menu-item display-inline">
+            Services
+         </div>
+         <div class="menu-item display-inline">
+            About
+         </div>
+         <div class="menu-item display-inline">
+            Contact
+         </div>
+      </header>
+
+      <header class="">
+         <p>A menu with items displayed inline as blocks:</p>
+         <div class="menu-item display-inline-block">
+            Home
+         </div>
+         <div class="menu-item display-inline-block">
+            Services
+         </div>
+         <div class="menu-item display-inline-block">
+            About
+         </div>
+         <div class="menu-item display-inline-block">
+            Contact
+         </div>
+      </header>
 
 </div>
 
