--- a/assignment-12/index.html
+++ b/assignment-12/index.html
@@ -82,8 +82,21 @@
             Contact
          </div>
       </header>
-
-</div>
-
+<div>
+<main class="ex1-container float">
+<div class="red-square"></div>
+<div class="red-square"></div>
+<div class="red-square float-right"></div>
+<h2>Float Example</h2>
+<p>Nostrud anim velit sint minim proident labore ullamco labore occaecat eiusmod occaecat et. Eu cupidatat eu quis dolor cillum laboris dolor culpa ut amet duis cillum. Culpa proident culpa fugiat duis esse ex mollit ea occaecat. Ex consectetur excepteur dolore cillum Lorem sit quis ea proident pariatur pariatur dolore proident. Quis cupidatat Lorem id amet esse nulla consequat aliquip sint ad.</p>
+</main>
+<br />
+<main class="ex1-container">
+<div class="red-square"></div>
+<div class="red-square"></div>
+<div class="red-square"></div>
+<h2>No Float Example</h2>
+<p>Nostrud anim velit sint minim proident labore ullamco labore occaecat eiusmod occaecat et. Eu cupidatat eu quis dolor cillum laboris dolor culpa ut amet duis cillum. Culpa proident culpa fugiat duis esse ex mollit ea occaecat. Ex consectetur excepteur dolore cillum Lorem sit quis ea proident pariatur pariatur dolore proident. Quis cupidatat Lorem id amet esse nulla consequat aliquip sint ad.</p>
+</main>
 </div>
 </body>
